# quant_assignment

./: .gitattributes  .gitignore  README.md  pyproject.toml  question1_prob_stats.md  question2_stochastic_processes.md  question3_ml_prediction.md  requirements.txt
data/parsed_ondo/: 241974_2025-02-18_okex_book_1_fc.parquet  241974_2025-02-18_okex_trade_fc.parquet  2820_2025-02-18_bybit_book_1_fc.parquet  2820_2025-02-18_bybit_trade_fc.parquet  reshaped_data.parquet
src/quant_test/: __init__.py  cli.py  data_utils.py  question1_starter.py  question2_starter.py  question3_starter.py  run_all.py  utils.py
src/quant_test/tests/: __init__.py  test_utils.py
