[project]
name = "quant_test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "backtest", email = "backtest@example.com" }
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.3",
    "polars>=0.19.3",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "plotly>=5.16.1",
    "statsmodels>=0.14.0",
    "scipy>=1.11.3",
    "pyarrow>=14.0.1",
    "fastparquet>=2023.10.1",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "tabulate>=0.9.0",
    "tqdm>=4.66.1",
    "ipykernel>=6.25.2",
    "ipywidgets>=8.1.1",
    "jupyterlab>=4.0.6",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]
requires-python = ">= 3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
quant-test = "quant_test.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quant_test"]
